--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_logout">Logout</string>
 
+    <string name="na">N/A</string>
+
     <string name="menu_home">Price Control</string>
     <string name="menu_gallery">Orders</string>
     <string name="menu_slideshow">Profile</string>
