--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
 
     <string name="not_available">N/A</string>
     <string name="apply">Apply</string>
+
     <string name="cancel">Cancel</string>
     <string name="request">Request</string>
     <string name="title_activity_maps">Map</string>
@@ -91,10 +92,17 @@
     <string name="end">Order Cancel</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    
-    
+
+
     <string name="sign_up">Sign Up</string>
+    <string name="order_details">Order details</string>
     <string name="sign_up_to">Sign up to get the best experience</string>
 
     <string name="powered_by">Powered by Group IT E</string>
+    
+    <string name="name">Name:</string>
+    <string name="city">City:</string>
+    <string name="email_address">Email:</string>
+    <string name="phone_no">Phone:</string>
+
 </resources>
