--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="can_not_be">can not be empty</string>
 
     <string name="not_available">N/A</string>
-    <string name="apply">Apply</string>
+    <string name="apply">Place an Order</string>
     <string name="well_done">Well Done</string>
     <string name="your_profile_is">Your profile has been created.</string>
     <string name="cancel">Cancel</string>
